--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "jest": "29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "msw": "1.1.0",
-    "nodemon": "2.0.20",
-    "webpack": "5.75.0",
+    "nodemon": "^3.1.0",
+    "webpack": "^5.91.0",
     "webpack-dev-server": "4.11.1"
   },
   "dependencies": {
     "@testing-library/user-event": "14.4.3",
-    "axios": "1.3.4",
+    "axios": "^1.6.8",
     "cors": "2.8.5",
     "css-loader": "^6.7.3",
-    "express": "4.18.2",
+    "express": "^4.19.2",
     "jest-dom": "4.0.0",
     "moment": "2.29.4",
     "mutationobserver-shim": "0.3.7",
